Set the shadow around naruto png.

--- a/anime-blog/public/index.html
+++ b/anime-blog/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Node App</title>
+    <title>My Anime Blog</title>
     <link rel="stylesheet" href="./css/output.css">
     <style>
         /* Styles to set the background color */
@@ -14,7 +14,7 @@
             height: 100%;
             margin: 0;
             padding: 0;
-            background-color: #FFC000;
+            background-color: #f0eded;
             /* Dark yellow golden background color */
             overflow: hidden;
             /* Prevents scrolling */
@@ -27,7 +27,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: rgba(235, 184, 14, 0.5);
             /* Dark transparent layer */
             z-index: 1;
             /* Ensure it's above the background, below the content */
@@ -71,6 +71,8 @@
             /* Maximum width to ensure it does not get too large */
             height: auto;
             /* Maintain aspect ratio */
+            filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.5));
+            /* Shadow that follows PNG contours */
         }
     </style>
 </head>
